# Rustypipe

./: .gitignore  Cargo.toml  FUTURE.md  LICENSE  README.md  cargo.toml
.rustypipe/runs/6224ce2b-a9bf-44eb-8002-a9ed18015131/: count_2025-10-17_02-51-07.json  download_2025-10-17_02-51-06.json  echo_2025-10-17_02-51-07.json  pipeline.yaml
examples/: sample_pipeline.yaml
source_code/: main.rs
src/: backends.rs  cli.rs  main.rs  plugins.rs  util.rs
src/pipeline/: executor.rs  mod.rs  parser.rs
